# npe-pfn

./: README.md  install_diffeqtorch.sh  pyproject.toml
conf/: config.yaml
conf/eval/: all.yaml  c2st.yaml  calibration.yaml  log_prob.yaml  nll.yaml  nll_sbc.yaml  none.yaml  sbc.yaml  std_dist.yaml  swd.yaml  tarp.yaml
conf/experiment/: allen_sbc.yaml  allen_sbc_tabpfn.yaml  allen_seq.yaml  allen_seq_tabpfn.yaml  allen_synth_seq.yaml  allen_synth_seq_tabpfn.yaml  example.yaml  flexible_linear.yaml  flexible_linear_tabpfn.yaml  hypothesis_bm.yaml  hypothesis_bm_tabpfn.yaml  lv_long_npe.yaml  lv_long_tabpfn.yaml  lv_long_tabpfn_raw.yaml  misspecified_likelihood.yaml  misspecified_likelihood_tabpfn.yaml  misspecified_prior.yaml  misspecified_prior_tabpfn.yaml  order_tabpfn.yaml  permuted_sbibm_tabpfn.yaml  sbibm_aux.yaml  sbibm_aux_tabpfn.yaml  sbibm_core.yaml  sbibm_core_ensemble.yaml  sbibm_core_ensemble_julia.yaml  sbibm_core_sbc.yaml  sbibm_core_sweeper.yaml  sbibm_core_tabpfn.yaml  sbibm_core_tabpfn_filter_abla.yaml  sbibm_julia.yaml  sbibm_julia_sbc.yaml  sbibm_julia_sweeper.yaml  sbibm_julia_tabpfn.yaml  sbibm_julia_tabpfn_filter_abla.yaml  sbibm_seq_core.yaml  sbibm_seq_core_tabpfn.yaml  sbibm_seq_julia.yaml  sbibm_seq_julia_tabpfn.yaml  sbibm_seq_lv.yaml  simformer_bm.yaml  (+24 more)
conf/launcher/: slurm.yaml
conf/method/: filtered_tabpfn.yaml  filtered_tabpfn_binary.yaml  filtered_tabpfn_infomax.yaml  nle.yaml  npe.yaml  npe_ensemble.yaml  npe_infomax.yaml  npe_sweeper.yaml  nre.yaml  snle.yaml  snpe.yaml  snre.yaml  tabpfn.yaml  tabpfn_infomax.yaml  ts_tabpfn.yaml  tsnpe.yaml  uncond_tabpfn.yaml
conf/partition/: gpu.yaml
conf/sweeper/: tpe.yaml
conf/task/: 2spirals.yaml  8gaussians.yaml  allen.yaml  attempto.yaml  bernoulli_glm.yaml  bernoulli_glm_raw.yaml  bsds300.yaml  chain.yaml  chain_long.yaml  checkerboard.yaml  death.yaml  docking.yaml  flexible_linear.yaml  gas.yaml  gaussian_linear.yaml  gaussian_linear_uniform.yaml  gaussian_mixture.yaml  hepmass.yaml  lotka_volterra.yaml  lotka_volterra_long.yaml  mg1.yaml  miniboone.yaml  misspecified_likelihood.yaml  misspecified_prior.yaml  orderedmixeddist.yaml  orderedsimplenonlinear.yaml  permuted.yaml  pinwheel.yaml  power.yaml  rings.yaml  sir.yaml  sir_long.yaml  slcp.yaml  slcp_distractors.yaml  spatial_sir.yaml  spatial_sir_large.yaml  spatial_sir_medium.yaml  streams.yaml  (+4 more)
figures/: README.md
main_results/: readme.md
tabpfn_sbi/: __init__.py
(+189 files in other folders)
